# electrode-visualizer

./: .gitignore  AppImageBuilder.yml  README.md  config-pyinstaller.bat  pyproject.toml  requirements.txt  versioning.txt
electrode_visualizer/: Application.py  __main__.py
